Update list of vowel_consonant_consonant.ipynb

--- a/wordlist_creation/list of vowel_consonant_consonant.ipynb
+++ b/wordlist_creation/list of vowel_consonant_consonant.ipynb
@@ -28,6 +28,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The dataset from which exception wordlists are created is Tēzaurs (Spektors, Andrejs; et al.). The data file can be found in tezaurs_2022_tei-xml.zip/tezaurs_2022_tei.xml and downloaded here: https://repository.clarin.lv/repository/xmlui/handle/20.500.12574/66\n",
+    "\n",
     "Extracting entities with their part of speech tags"
    ]
   },
